--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
   <title>Ionic + Svelte + TS + Vite App</title>
   <!--ssr:head-->
+
+  <script type="module"
+    src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"></script>
+  <script nomodule
+    src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"></script>
+
 </head>
 
 <body>
